{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 58,
  "lineage": "40e3541f-11ec-d2a7-2790-f43481015fee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e18fd8770a7a6e62",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0cd89ce426a56be0a",
            "domain": "vpc",
            "id": "eipalloc-0e18fd8770a7a6e62",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01c3e8cba2e260596",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-54-157-83-217.compute-1.amazonaws.com",
            "public_ip": "54.157.83.217",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.joseph-gw",
            "aws_network_interface.web-server-joseph",
            "aws_security_group.allow_web_traffic",
            "aws_subnet.joseph-subnet",
            "aws_vpc.joseph-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "joseph-web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:495143188735:instance/i-0823f12ea82802e8e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0823f12ea82802e8e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "joseph-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-01c3e8cba2e260596"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01c3e8cba2e260596",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "54.157.83.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dfe5c7c43310d076",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-046127a20a11a076c",
            "tags": {
              "Name": "JosephWebServer"
            },
            "tags_all": {
              "Name": "JosephWebServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e747eab89eb2e23"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-joseph",
            "aws_security_group.allow_web_traffic",
            "aws_subnet.joseph-subnet",
            "aws_vpc.joseph-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "joseph-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495143188735:internet-gateway/igw-0a49dbf3159eb1512",
            "id": "igw-0a49dbf3159eb1512",
            "owner_id": "495143188735",
            "tags": {
              "Name": "joseph-gw"
            },
            "tags_all": {
              "Name": "joseph-gw"
            },
            "vpc_id": "vpc-069aff8286dc566a2"
          },
          "dependencies": [
            "aws_vpc.joseph-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-joseph",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495143188735:network-interface/eni-01c3e8cba2e260596",
            "id": "eni-01c3e8cba2e260596",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:97:d6:1a:29:4b",
            "owner_id": "495143188735",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05e747eab89eb2e23"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-046127a20a11a076c"
          },
          "dependencies": [
            "aws_security_group.allow_web_traffic",
            "aws_subnet.joseph-subnet",
            "aws_vpc.joseph-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "joseph-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495143188735:route-table/rtb-0dba21972a6e7ffb3",
            "id": "rtb-0dba21972a6e7ffb3",
            "owner_id": "495143188735",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a49dbf3159eb1512",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a49dbf3159eb1512",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "joseph-route-table"
            },
            "tags_all": {
              "Name": "joseph-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-069aff8286dc566a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.joseph-gw",
            "aws_vpc.joseph-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059d19afa8979b8c0",
            "route_table_id": "rtb-0dba21972a6e7ffb3",
            "subnet_id": "subnet-046127a20a11a076c"
          },
          "dependencies": [
            "aws_internet_gateway.joseph-gw",
            "aws_route_table.joseph-route-table",
            "aws_subnet.joseph-subnet",
            "aws_vpc.joseph-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495143188735:security-group/sg-05e747eab89eb2e23",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e747eab89eb2e23",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "495143188735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-069aff8286dc566a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.joseph-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "joseph-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495143188735:subnet/subnet-046127a20a11a076c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046127a20a11a076c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495143188735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "joseph-subnet"
            },
            "tags_all": {
              "Name": "joseph-subnet"
            },
            "vpc_id": "vpc-069aff8286dc566a2"
          },
          "dependencies": [
            "aws_vpc.joseph-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "joseph-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495143188735:vpc/vpc-069aff8286dc566a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02a6f5723fc425235",
            "default_route_table_id": "rtb-0ea70a25e2540e37c",
            "default_security_group_id": "sg-095a791bb59734ae8",
            "dhcp_options_id": "dopt-0a8a8b0322a5f960e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-069aff8286dc566a2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ea70a25e2540e37c",
            "owner_id": "495143188735",
            "tags": {
              "Name": "Joseph-vpc"
            },
            "tags_all": {
              "Name": "Joseph-vpc"
            }
          }
        }
      ]
    }
  ]
}